# pdftoolkit

./: .gitignore  AGENTS.md  PDFToolkit.spec  PdfToolkit.slnx  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  release.yml
src/: app.py  viewer.py
src/PdfToolkit/: App.axaml  App.axaml.cs  PdfToolkit.csproj  Program.cs  app.manifest
src/PdfToolkit/Models/: DocumentModel.cs  ToolItem.cs
src/PdfToolkit/Services/: FileDialogService.cs  PageRangeParser.cs
src/PdfToolkit/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs  ViewerViewModel.cs
src/PdfToolkit/ViewModels/Tools/: AddContentViewModel.cs  CompressViewModel.cs  ConvertViewModel.cs  EncryptViewModel.cs  ExtractTextViewModel.cs  MergeViewModel.cs  MetadataViewModel.cs  ReorderViewModel.cs  RotateViewModel.cs  SplitViewModel.cs  WatermarkViewModel.cs
src/PdfToolkit/Views/: MainWindow.axaml  MainWindow.axaml.cs  ViewerView.axaml  ViewerView.axaml.cs
src/PdfToolkit/Views/Tools/: AddContentView.axaml  AddContentView.axaml.cs  CompressView.axaml  CompressView.axaml.cs  ConvertView.axaml  ConvertView.axaml.cs  EncryptView.axaml  EncryptView.axaml.cs  ExtractTextView.axaml  ExtractTextView.axaml.cs  MergeView.axaml  MergeView.axaml.cs  MetadataView.axaml  MetadataView.axaml.cs  ReorderView.axaml  ReorderView.axaml.cs  RotateView.axaml  (+5 more)
src/tools/: add_content.py  compress.py  convert.py  encrypt.py  extract_text.py  merge.py  metadata.py  reorder.py  rotate.py  split.py  watermark.py
src/utils/: file_ops.py
tests/: test_core.py  test_imports.py
